--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/contato.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/contato.html
@@ -43,7 +43,7 @@
 
             <div class="form">
                 <div class="esquerda">
-                    <img src="./assets/terrafone.png" width="400px" height="300px" alt="">
+                    <img src="../../../assets/terrafone.png" width="400px" height="300px" alt="">
                 </div>
                 <div class="direita">
                     <form action="#" method="post">
