Login Funcionando e Atualização Icones dos Jogos

--- a/ProjetoIndividual-GeoTech/web-data-viz/public/contato.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/contato.html
@@ -64,7 +64,7 @@
 
                         <label for="message">Mensagem:</label>
                         <textarea id="message" name="message" rows="4" placeholder="Escreva aqui sua mensagem..."
-                            required></textarea>
+                            required maxlength="280"></textarea>
 
                         <div class="enviar">
                             <input type="submit" value="Enviar">
