--- a/ProjetoIndividual-GeoTech/web-data-viz/public/index.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/index.html
@@ -43,6 +43,7 @@
         </div>
     </div>
     <div class="conteudoinicio">
+        <h1 class="chamar" style="font-size: 40px;">Seja Bem-Vindo a GeoTech!</h1>
         <h1 class="chamar"> Explore o mundo e descubra os fascínios da geografia com a GeoTech!</h1>
         <a  href="cadastro.html"><button class="btncomecar" >Começar!</button></a>
     </div>
