--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/jogos.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/jogos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoTech - Página de Jogos</title>
     <link rel="stylesheet" href="../style.css">
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
 </head>
 
 <body>
@@ -38,55 +39,75 @@
         <h1 style="font-size: 20px;font-weight: 700;margin-bottom: -20px; color: white;">Divirta-se</h1>
         <div class="inicio1">
             <div class="continentes">
-                <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/Africa_%28orthographic_projection%29.svg/800px-Africa_%28orthographic_projection%29.svg.png" alt="">
+                <lord-icon src="https://cdn.lordicon.com/ofzpbawy.json" trigger="loop"
+                    colors="primary:#000000,secondary:#30c9e8,tertiary:#16c72e,quaternary:#16c72e"
+                    style="width:165px;height:165px;margin-bottom: -10px;">
+                </lord-icon>
+                <!-- <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/Africa_%28orthographic_projection%29.svg/800px-Africa_%28orthographic_projection%29.svg.png" alt=""> -->
                 <h5>Jogo Da Memória - Bandeiras</h5>
                 <span class="descricao">Sem Tempo - 8 Pares</span>
                 <a href="../Memory Card Games/Memory Cards Game [Demo 1]/jogar.html">
                     <button type="button" class="botaoJogos">Jogar</button>
-                  </a>
+                </a>
             </div>
             <div class="continentesp">
-                <h4 class="desafio">Desafio!</h4>
-                <img  width="110px" src="../quizG.png" alt="">
+                <h4 style="margin-bottom: 5px;" class="desafio">Desafio!</h4>
+                <img width="140px" src="../quizG.png" alt="">
                 <h5 class="quiz">Quiz - GeoTech</h5>
                 <a href="../Quiz - GeoTech/quiz.html">
                     <button type="button" class="botaoJogos">Jogar</button>
-                  </a>
+                </a>
             </div>
             <div class="continentes">
-                <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/63/Latin_America_%28orthographic_projection%29.svg/1200px-Latin_America_%28orthographic_projection%29.svg.png" alt="">
+                <lord-icon src="https://cdn.lordicon.com/ofzpbawy.json" trigger="loop"
+                    colors="primary:#000000,secondary:#30c9e8,tertiary:#16c72e,quaternary:#16c72e"
+                    style="width:165px;height:165px;margin-bottom: -10px;">
+                </lord-icon>
+                <!-- <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/63/Latin_America_%28orthographic_projection%29.svg/1200px-Latin_America_%28orthographic_projection%29.svg.png" alt=""> -->
                 <h5>Jogo Da Memória - Bandeiras</h5>
                 <span class="descricao">Com Tempo - 6 Pares</span>
                 <a href="../Memory Card Games/Memory Cards Game [Demo 2]/jogar.html">
                     <button type="button" class="botaoJogos">Jogar</button>
-                  </a>
+                </a>
             </div>
-           
-             </div>
+
+        </div>
         <div class="inicio2">
             <div class="continentes">
-                <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Asia_%28orthographic_projection%29.svg/250px-Asia_%28orthographic_projection%29.svg.png" alt="">
-                <h5>Acerte o Pais Pela Bandeira</h5>
+                <lord-icon src="https://cdn.lordicon.com/pbyiftgw.json" trigger="loop" delay="500"
+                    colors="primary:#121331,secondary:#16c72e,tertiary:#16a9c7,quaternary:#16a9c7"
+                    style="width:165px;height:165px">
+                </lord-icon>
+                <!-- <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Asia_%28orthographic_projection%29.svg/250px-Asia_%28orthographic_projection%29.svg.png" alt=""> -->
+                <h5>Acerte o Pais</h5>
                 <span class="descricao"></span>
                 <a href="../Word Guessing Game/index.html">
                     <button type="button" class="botaoJogos">Jogar</button>
-                  </a>
+                </a>
             </div>
             <div class="continentes">
-                <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Location_North_America.svg/250px-Location_North_America.svg.png" alt="">
+                <lord-icon src="https://cdn.lordicon.com/ofzpbawy.json" trigger="loop"
+                    colors="primary:#000000,secondary:#30c9e8,tertiary:#16c72e,quaternary:#16c72e"
+                    style="width:165px;height:165px">
+                </lord-icon>
+                <!-- <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Location_North_America.svg/250px-Location_North_America.svg.png" alt=""> -->
                 <h5>Jogo Da Forca - Países</h5>
                 <span class="descricao"></span>
                 <a href="../forcaJogo/jogar.html">
                     <button type="button" class="botaoJogos">Jogar</button>
-                  </a>
+                </a>
             </div>
             <div class="continentes">
-                <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Europe_orthographic_Caucasus_Urals_boundary_%28with_borders%29.svg/250px-Europe_orthographic_Caucasus_Urals_boundary_%28with_borders%29.svg.png" alt="">
+                <lord-icon src="https://cdn.lordicon.com/pbyiftgw.json" trigger="loop" delay="500"
+                    colors="primary:#121331,secondary:#16c72e,tertiary:#16a9c7,quaternary:#16a9c7"
+                    style="width:165px;height:165px">
+                </lord-icon>
+                <!-- <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Europe_orthographic_Caucasus_Urals_boundary_%28with_borders%29.svg/250px-Europe_orthographic_Caucasus_Urals_boundary_%28with_borders%29.svg.png" alt=""> -->
                 <h5>Jogo Das Bandeiras</h5>
                 <span class="descricao"></span>
                 <a href="../jogoBandeiras/flags.html">
                     <button type="button" class="botaoJogos">Jogar</button>
-                  </a>
+                </a>
             </div>
         </div>
     </div>
