--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/index.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/index.html
@@ -15,7 +15,7 @@
             <div class="principal">
                 <img src="https://i.pinimg.com/originals/4b/97/c1/4b97c18135696f758ff3aee979f868a0.png" alt=""
                     class="logo" width="50px">
-                <h1 class="titulo">GeoTech</h1>
+                <h1 id="tituloNome" class="titulo">GeoTech</h1>
             </div>
             <ul class="navbar">
                 <li>
@@ -28,7 +28,16 @@
                     <a href="jogos.html">Jogos</a>
                 </li>
                 <li>
+                    <a href="ranking.html">Ranking</a>
+                </li>
+                <li>
                     <a href="contato.html">Contato</a>
+                </li>
+                <li>
+                    |
+                </li>
+                <li onclick="sair()">
+                    <Span style="color: #fff; font-weight: bold; cursor: pointer;">Sair</Span> 
                 </li>
             </ul>
         </div>
@@ -88,3 +97,16 @@
 </body>
 
 </html>
+
+<script>
+    function sair() {
+        sessionStorage.clear();
+        window.location = "../../../index.html";
+    }
+
+    const nomeUser = sessionStorage.NOME_USUARIO;
+    const idUser = sessionStorage.ID_USUARIO;
+    const emailUser = sessionStorage.EMAIL_USUARIO;
+    const continenteUser = sessionStorage.CONTINENTE_USUARIO;
+
+</script>
