--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/ranking.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/ranking.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeoTech - Página Contato</title>
+    <title>GeoTech - Página Ranking</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 
@@ -43,36 +43,7 @@
         </div>
     </div>
     <div class="conteudocontato">
-
-        <div class="contato">
-            <h2 class="tituloh2"> Entre em Contato:</h2>
-
-            <p class="pcontato">Entre em contato conosco hoje mesmo para saber mais sobre como podemos ajudá-lo a
-                explorar o mundo através dos dados geográficos e desvendar as maravilhas do nosso planeta.</p>
-
-            <div class="form">
-                <div class="esquerda">
-                    <img src="../../../assets/terrafone.png" width="400px" height="300px" alt="">
-                </div>
-                <div class="direita">
-                    <form action="#" method="post">
-                        <label for="name">Nome:</label>
-                        <input type="text" id="name" name="name" placeholder="Insira seu nome" required>
-
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" placeholder="Insira seu email" required>
-
-                        <label for="message">Mensagem:</label>
-                        <textarea id="message" name="message" rows="4" placeholder="Escreva aqui sua mensagem..."
-                            required></textarea>
-
-                        <div class="enviar">
-                            <input type="submit" value="Enviar">
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+        
     </div>
     <div class="footer">
         <p class="footerp">© Copyright GeoTech. Todos os Direitos Reservados</p>
