--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/contato.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/contato.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoTech - Página Contato</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../../../assets/GeoTech.png" type="image/png">
 </head>
 
 <body>
@@ -13,8 +14,7 @@
 
         <div class="container">
             <div class="principal">
-                <img src="https://i.pinimg.com/originals/4b/97/c1/4b97c18135696f758ff3aee979f868a0.png" alt=""
-                    class="logo" width="50px">
+                <img src="../../../assets/GeoTech.png" alt="" class="logo" width="55px">
                 <h1 class="titulo">GeoTech</h1>
             </div>
             <ul class="navbar">
@@ -28,7 +28,7 @@
                     <a href="jogos.html">Jogos</a>
                 </li>
                 <li>
-                    <a href="ranking.html">Ranking</a>
+                    <a style="display: flex; width: max-content;" href="real.html">Tempo Real</a>
                 </li>
                 <li>
                     <a href="contato.html">Contato</a>
