--- a/ProjetoIndividual-GeoTech/web-data-viz/public/sobre.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/sobre.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoTech - Página Sobre</title>
     <link rel="stylesheet" href="./css/styleinicio.css">
+    <link rel="icon" href="./assets/GeoTech.png" type="image/png">
+
 </head>
 
 <body>
@@ -13,8 +15,7 @@
 
         <div class="container">
             <div class="principal">
-                <img src="https://i.pinimg.com/originals/4b/97/c1/4b97c18135696f758ff3aee979f868a0.png" alt=""
-                    class="logo" width="50px">
+                <img src="./assets/GeoTech.png" alt="" class="logo" width="55px">
                 <h1 class="titulo">GeoTech</h1>
             </div>
             <ul class="navbarinicio">
