--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/index.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoTech - Página Inicial</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../../../assets/GeoTech.png" type="image/png">
 </head>
 
 <body>
@@ -13,8 +14,7 @@
 
         <div class="container">
             <div class="principal">
-                <img src="https://i.pinimg.com/originals/4b/97/c1/4b97c18135696f758ff3aee979f868a0.png" alt=""
-                    class="logo" width="50px">
+                <img src="../../../assets/GeoTech.png" alt="" class="logo" width="55px">
                 <h1 id="tituloNome" class="titulo">GeoTech</h1>
             </div>
             <ul class="navbar">
@@ -28,7 +28,7 @@
                     <a href="jogos.html">Jogos</a>
                 </li>
                 <li>
-                    <a href="ranking.html">Ranking</a>
+                    <a style="display: flex; width: max-content;" href="real.html">Tempo Real</a>
                 </li>
                 <li>
                     <a href="contato.html">Contato</a>
@@ -48,6 +48,7 @@
             <div class="continentes">
                 <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/Africa_%28orthographic_projection%29.svg/800px-Africa_%28orthographic_projection%29.svg.png" alt="">
                 <h5>África</h5>
+                <p class="quantidade">Usuarios:</p>
                 <a href="Continentes/africa.html">
                     <button type="button" class="botaoGraficos">Ver Informações</button>
                   </a>
@@ -55,6 +56,7 @@
             <div class="continentes">
                 <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Location_North_America.svg/250px-Location_North_America.svg.png" alt="">
                 <h5>América do Norte e Central</h5>
+                <p class="quantidade">Usuarios:</p>
                 <a href="Continentes/centroNorte.html">
                     <button type="button" class="botaoGraficos">Ver Informações</button>
                   </a>
@@ -62,6 +64,7 @@
             <div class="continentes">
                 <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/63/Latin_America_%28orthographic_projection%29.svg/1200px-Latin_America_%28orthographic_projection%29.svg.png" alt="">
                 <h5>América do Sul</h5>
+                <p class="quantidade">Usuarios:</p>
                 <a href="Continentes/sul.html">
                     <button type="button" class="botaoGraficos">Ver Informações</button>
                   </a>
@@ -71,6 +74,7 @@
             <div class="continentes">
                 <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Asia_%28orthographic_projection%29.svg/250px-Asia_%28orthographic_projection%29.svg.png" alt="">
                 <h5>Ásia</h5>
+                <p class="quantidade">Usuarios:</p>
                 <a href="Continentes/asia.html">
                     <button type="button" class="botaoGraficos">Ver Informações</button>
                   </a>
@@ -78,6 +82,7 @@
             <div class="continentes">
                 <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Europe_orthographic_Caucasus_Urals_boundary_%28with_borders%29.svg/250px-Europe_orthographic_Caucasus_Urals_boundary_%28with_borders%29.svg.png" alt="">
                 <h5>Europa</h5>
+                <p class="quantidade">Usuarios:</p>
                 <a href="Continentes/europa.html">
                     <button type="button" class="botaoGraficos">Ver Informações</button>
                   </a>
@@ -85,6 +90,7 @@
             <div class="continentes">
                 <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8e/Oceania_%28orthographic_projection%29.svg/250px-Oceania_%28orthographic_projection%29.svg.png" alt="">
                 <h5>Oceânia</h5>
+                <p class="quantidade">Usuarios:</p>
                 <a href="Continentes/oceania.html">
                     <button type="button" class="botaoGraficos">Ver Informações</button>
                   </a>
