--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/jogos.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/jogos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoTech - Página de Jogos</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../../../assets/GeoTech.png" type="image/png">
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
 </head>
 
@@ -14,8 +15,7 @@
 
         <div class="container">
             <div class="principal">
-                <img src="https://i.pinimg.com/originals/4b/97/c1/4b97c18135696f758ff3aee979f868a0.png" alt=""
-                    class="logo" width="50px">
+                <img src="../../../assets/GeoTech.png" alt="" class="logo" width="55px">
                 <h1 class="titulo">GeoTech</h1>
             </div>
             <ul class="navbar">
@@ -29,7 +29,7 @@
                     <a href="jogos.html">Jogos</a>
                 </li>
                 <li>
-                    <a href="ranking.html">Ranking</a>
+                    <a style="display: flex; width: max-content;" href="real.html">Tempo Real</a>
                 </li>
                 <li>
                     <a href="contato.html">Contato</a>
@@ -48,11 +48,7 @@
         <h1 style="font-size: 20px;font-weight: 700;margin-bottom: -20px; color: white;">Divirta-se</h1>
         <div class="inicio1">
             <div class="continentes">
-                <lord-icon src="https://cdn.lordicon.com/ofzpbawy.json" trigger="loop"
-                    colors="primary:#000000,secondary:#30c9e8,tertiary:#16c72e,quaternary:#16c72e"
-                    style="width:165px;height:165px;margin-bottom: -10px;">
-                </lord-icon>
-                <!-- <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/Africa_%28orthographic_projection%29.svg/800px-Africa_%28orthographic_projection%29.svg.png" alt=""> -->
+                <img class="cardimg2" src="../Jogo-da-memoria-26-05-2024-removebg-preview.png" alt="">
                 <h5>Jogo Da Memória - Bandeiras</h5>
                 <span class="descricao">Sem Tempo - 8 Pares</span>
                 <a href="../Memory Card Games/Memory Cards Game [Demo 1]/jogar.html">
@@ -68,12 +64,8 @@
                 </a>
             </div>
             <div class="continentes">
-                <lord-icon src="https://cdn.lordicon.com/ofzpbawy.json" trigger="loop"
-                    colors="primary:#000000,secondary:#30c9e8,tertiary:#16c72e,quaternary:#16c72e"
-                    style="width:165px;height:165px;margin-bottom: -10px;">
-                </lord-icon>
-                <!-- <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/63/Latin_America_%28orthographic_projection%29.svg/1200px-Latin_America_%28orthographic_projection%29.svg.png" alt=""> -->
-                <h5>Jogo Da Memória - Bandeiras</h5>
+                <img class="cardimg2" src="../Jogo-da-memoria-26-05-2024-removebg-preview.png" alt="">
+                   <h5>Jogo Da Memória - Bandeiras</h5>
                 <span class="descricao">Com Tempo - 6 Pares</span>
                 <a href="../Memory Card Games/Memory Cards Game [Demo 2]/jogar.html">
                     <button type="button" class="botaoJogos">Jogar</button>
@@ -91,11 +83,7 @@
                 </a>
             </div>
             <div class="continentes">
-                <lord-icon src="https://cdn.lordicon.com/ofzpbawy.json" trigger="loop"
-                    colors="primary:#000000,secondary:#30c9e8,tertiary:#16c72e,quaternary:#16c72e"
-                    style="width:165px;height:165px">
-                </lord-icon>
-                <!-- <img class="cardimg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Location_North_America.svg/250px-Location_North_America.svg.png" alt=""> -->
+                <img class="cardimg3" src="../Jogo-da-forca-26-05-2024.png" alt="">
                 <h5>Jogo Da Forca - Países</h5>
                 <span class="descricao"></span>
                 <a href="../forcaJogo/jogar.html">
