--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/jogos.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/jogos.html
@@ -32,7 +32,7 @@
                     <a style="display: flex; width: max-content;" href="real.html">Tempo Real</a>
                 </li>
                 <li>
-                    <a href="contato.html">Contato</a>
+                    <a href="contato.html">Feedback</a>
                 </li>
                 <li>
                     |
@@ -56,7 +56,7 @@
                 </a>
             </div>
             <div class="continentesp">
-                <h4 style="margin-bottom: 5px;" class="desafio">Desafio!</h4>
+                <h4 style="margin-bottom: 5px; margin-top: 5px;" class="desafio">Desafio!</h4>
                 <img width="140px" src="../quizG.png" alt="">
                 <h5 class="quiz">Quiz - GeoTech</h5>
                 <a href="../Quiz - GeoTech/quiz.html">
