--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/real.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/real.html
@@ -32,7 +32,7 @@
                     <a style="display: flex; width: max-content;" href="real.html">Tempo Real</a>
                 </li>
                 <li>
-                    <a href="contato.html">Contato</a>
+                    <a href="contato.html">Feedback</a>
                 </li>
                 <li>
                     |
