--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/Continentes/sul.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/Continentes/sul.html
@@ -31,19 +31,19 @@
             </div>
             <ul class="navbar">
                 <li>
-                    <a href="index.html">Início</a>
+                    <a href="../index.html">Início</a>
                 </li>
                 <li>
-                    <a href="curiosidadades.html">Curiosidades</a>
+                    <a href="../curiosidadades.html">Curiosidades</a>
                 </li>
                 <li>
-                    <a href="jogos.html">Jogos</a>
+                    <a href="../jogos.html">Jogos</a>
                 </li>
                 <li>
-                    <a style="display: flex; width: max-content;" href="real.html">Tempo Real</a>
+                    <a style="display: flex; width: max-content;" href="../real.html">Tempo Real</a>
                 </li>
                 <li>
-                    <a href="contato.html">Contato</a>
+                    <a href="../contato.html">Feedback</a>
                 </li>
                 <li>
                     |
