--- a/ProjetoIndividual-GeoTech/web-data-viz/public/contato.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/contato.html
@@ -55,21 +55,20 @@
                     <img src="./assets/terrafone.png" width="400px" height="300px" alt="">
                 </div>
                 <div class="direita">
-                    <form action="#" method="post">
+                    <div class="formulario">
                         <label for="name">Nome:</label>
-                        <input type="text" id="name" name="name" placeholder="Insira seu nome" required>
+                        <input type="text" id="nome_input" name="name" placeholder="Insira seu nome" required>
 
                         <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" placeholder="Insira seu email" required>
+                        <input type="email" id="email_input" name="email" placeholder="Insira seu email" required>
 
                         <label for="message">Mensagem:</label>
-                        <textarea id="message" name="message" rows="4" placeholder="Escreva aqui sua mensagem..."
+                        <textarea id="message_input" name="message" rows="4" placeholder="Escreva aqui sua mensagem..."
                             required maxlength="280"></textarea>
-
                         <div class="enviar">
-                            <input type="submit" value="Enviar">
+                            <button class="buttone" onclick="mensagem()"> Enviar</button>
                         </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -80,3 +79,47 @@
 </body>
 
 </html>
+
+
+<script>
+    function mensagem() {
+        //Recupere o valor da nova input pelo nome do id
+        // Agora vá para o método fetch logo abaixo
+        var nomeV = nome_input.value;
+        var emailV = email_input.value;
+        var messageV = message_input.value;
+
+        // Enviando o valor da nova input
+        fetch("/usuarios/mensagem", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+                // crie um atributo que recebe o valor recuperado aqui
+                // Agora vá para o arquivo routes/usuario.js
+                nomeServer: nomeV,
+                emailServer: emailV,
+                messageServer: messageV
+               
+            }),
+        }).then(function (resposta) {
+            console.log("resposta: ", resposta);
+
+            if (resposta.ok) {
+                // nome_input.value = ""
+                // email_input.value = ""
+                // message.value = ""
+                window.location = "cadastro.html";
+
+            } else {
+                throw "Houve um erro ao tentar entrar em contato!";
+            }
+        })
+            .catch(function (resposta) {
+                console.log(`#ERRO: ${resposta}`);
+            });
+
+        return false; // Adicione isso para cancelar a submissão do formulário
+    }
+</script>
