Adicionando os Jogos no Banco de Dados e Atualização da Dashboard

--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/Memory Card Games/Memory Cards Game [Demo 1]/index.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/Memory Card Games/Memory Cards Game [Demo 1]/index.html
@@ -5,6 +5,7 @@
     <title>Jogo da Memória Bandeiras</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../../../../assets/GeoTech.png" type="image/png">
   </head>
   <body>
     <div class="tela"><a href="../../SitePrincipal/jogos.html"><button class="voltarInicio">Voltar</button></a><h2 style="color: white; margin-bottom: 10px;font-size: 23px;">Jogo Da Memória Bandeiras</h2></div>
