--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/Memory Card Games/Memory Cards Game [Demo 2]/fim.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/Memory Card Games/Memory Cards Game [Demo 2]/fim.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <link rel="icon" href="../../../../assets/GeoTech.png" type="image/png">
   </head>
 <body class="termino">
     <div class="fim">
