--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/Continentes/centroNorte.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/Continentes/centroNorte.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeoTech - Página América do Norte e Central</title>
     <link rel="stylesheet" href="../../style.css">
+    <link rel="icon" href="../../../../assets/GeoTech.png" type="image/png">
 </head>
 
 <script>
