--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/curiosidadades.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/curiosidadades.html
@@ -54,7 +54,7 @@
             <button class="contiCuri" onclick="oce()">Oceânia</button>
         </div>
         <div class="curiosidades" id="curiosidades">
-            <h1 class="tituloc">Planeta Terra</h1>
+            <h1 class="tituloc">Terra</h1>
 
             <div class="cur">
                 <img src="https://f.i.uol.com.br/fotografia/2019/11/13/15736845635dcc85533e341_1573684563_3x2_md.jpg"
