--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/jogos.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/jogos.html
@@ -47,7 +47,7 @@
         <h1 style="color: white; margin-bottom: -20px;">Tela de Jogos</h1>
         <h1 style="font-size: 20px;font-weight: 700;margin-bottom: -20px; color: white;">Divirta-se</h1>
         <div class="inicio1">
-            <div class="continentes">
+            <div class="jogos">
                 <img class="cardimg2" src="../Jogo-da-memoria-26-05-2024-removebg-preview.png" alt="">
                 <h5>Jogo Da Memória - Bandeiras</h5>
                 <span class="descricao">Sem Tempo - 8 Pares</span>
@@ -55,15 +55,15 @@
                     <button type="button" class="botaoJogos">Jogar</button>
                 </a>
             </div>
-            <div class="continentesp">
-                <h4 style="margin-bottom: 5px; margin-top: 5px;" class="desafio">Desafio!</h4>
-                <img width="140px" src="../quizG.png" alt="">
+            <div class="jogosp">
+                <h4 style="margin-bottom: -19px; margin-top: 10px;" class="desafio">Desafio!</h4>
+                <img width="390px" src="../../../assets/jogoQ.png" alt="">
                 <h5 class="quiz">Quiz - GeoTech</h5>
                 <a href="../Quiz - GeoTech/quiz.html">
                     <button type="button" class="botaoJogos">Jogar</button>
                 </a>
             </div>
-            <div class="continentes">
+            <div class="jogos">
                 <img class="cardimg2" src="../Jogo-da-memoria-26-05-2024-removebg-preview.png" alt="">
                    <h5>Jogo Da Memória - Bandeiras</h5>
                 <span class="descricao">Com Tempo - 6 Pares</span>
@@ -74,15 +74,15 @@
 
         </div>
         <div class="inicio2">
-            <div class="continentes">
-                <img width="160px" style="margin-top: 15px; margin-bottom: -15px;" src="../../../assets/acertePais.png" alt="">
+            <div class="jogos">
+                <img width="145px" style="border-radius: 10px;" src="https://is5-ssl.mzstatic.com/image/thumb/Purple114/v4/9b/67/da/9b67da91-8296-c31c-8f60-9566a35c5a7e/AppIcon-1x_U007emarketing-0-7-0-85-220.png/1024x1024bb.png" alt="">
                 <h5>Acerte o Pais</h5>
                 <span class="descricao"></span>
                 <a href="../Word Guessing Game/index.html">
                     <button type="button" class="botaoJogos">Jogar</button>
                 </a>
             </div>
-            <div class="continentes">
+            <div class="jogos">
                 <img class="cardimg3" src="../Jogo-da-forca-26-05-2024.png" alt="">
                 <h5>Jogo Da Forca - Países</h5>
                 <span class="descricao"></span>
@@ -90,8 +90,8 @@
                     <button type="button" class="botaoJogos">Jogar</button>
                 </a>
             </div>
-            <div class="continentes">
-                <img width="160px" style="margin-top: 15px; margin-bottom: -15px;" src="../../../assets/acertePais.png" alt="">
+            <div class="jogos">
+                <img width="145px" style="border-radius: 10px;" src="https://is5-ssl.mzstatic.com/image/thumb/Purple114/v4/9b/67/da/9b67da91-8296-c31c-8f60-9566a35c5a7e/AppIcon-1x_U007emarketing-0-7-0-85-220.png/1024x1024bb.png" alt="">
                 <h5>Jogo Das Bandeiras</h5>
                 <span class="descricao"></span>
                 <a href="../jogoBandeiras/flags.html">
