--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/Word Guessing Game/index.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/Word Guessing Game/index.html
@@ -5,6 +5,7 @@
     <title>Acerte as Bandeiras</title>
     <link rel="stylesheet" href="style.css" /> 
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <link rel="icon" href="../../../assets/GeoTech.png" type="image/png">
   </head>
   <body>
     <div class="tela"><a href="../SitePrincipal/jogos.html"><button class="voltarInicio">Voltar</button></a><h1 style="color: white;margin-top: 20px;">Qual o País?</h1></div>
