--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/forcaJogo/index.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/forcaJogo/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forca - GeoTech</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="../../../assets/GeoTech.png" type="image/png">
  <script src="../custom-scripts.js" defer></script>
     <script src="scripts/word-list.js" defer></script>
     <script src="scripts/script.js" defer></script>
