--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/jogoBandeiras/flags.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/jogoBandeiras/flags.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jogo Das Bandeiras</title>
     <link rel="stylesheet" href="flags.css" />
+    <link rel="icon" href="../../../assets/GeoTech.png" type="image/png">
   </head>
   <body>
     <div class="tela"><a href="../SitePrincipal/jogos.html"><button class="voltarInicio">Voltar</button></a><h1 style="color: white; margin-top: 16px;">Jogo Das Bandeiras</h1></div>
