--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/Quiz - GeoTech/quiz.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/Quiz - GeoTech/quiz.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <link rel="icon" href="../../../assets/GeoTech.png" type="image/png">
 </head>
 
 <body>
