--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/contato.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/contato.html
@@ -66,7 +66,7 @@
                         <label for="feedback">Tipo do Feedback:</label>
                         <select id="tipoFeedback">
                             <option value="Crítica">Crítica</option>
-                            <option value="Sugestão">Sugestão de Mudança</option>
+                            <option value="Sugestão">Sugestão</option>
                             <option value="Elogio">Elogio</option>
                             <option value="Contato">Mensagem de Contato</option>
                         </select>
